--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "next": "15.2.4",
+    "next-auth": "^4.24.11",
     "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -18,6 +19,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
